# ConnectAPI

./: 404.html  CNAME  Dockerfile  README.md  index.html  mkdocs.insiders.yml  mkdocs.yml  pyproject.toml  rebuild.sh  requirements.txt  sitemap.xml
actions/uninstall/: index.html
actions/upgrading_version/: index.html
cli/: config.py  continers.py  presistence.py  run.py
docs/: help.md  index.md
docs/actions/: uninstall.md  upgrading_version.md
docs/tutorial/: index.md
help/: index.html
release-notes/: index.html
scripts/: docs-live.sh  format.sh  lint.sh  publish-docs.sh  rebuild.sh  run-docker.sh  stop-docker.sh  stop_docker.sh
search/: search_index.json
site/: index.html  sitemap.xml
site/actions/uninstall/: index.html
site/release-notes/: index.html
site/search/: search_index.json
site/tutorial/: index.html
src/: config.py  configure.py  continers.py  debug.py  docker-compose.yml  file.py  logger.py  run.py  test.py
tutorial/: index.html
